PR post-tweaks