@@ -17,8 +17,6 @@
 package copy_as_powershell_requests.utils;
 
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.apache.commons.text.translate.CharSequenceTranslator;
@@ -29,23 +27,18 @@ public class StaticData {
   public final static String EXTENSION_NAME = "Copy as PowerShell request(s)";
   public static final CharSequenceTranslator ESCAPE_POWERSHELL;
 
-  public final static List<String> FORBIDDEN_HEADERS = Arrays
+  public final static List<String> SKIP_HEADERS = Arrays
       .asList("connection", "content-length", "cookie");
 
-  public final static List<String> METHODS = Arrays
+  public final static List<String> SUPPORTED_METHODS = Arrays
       // reference used for methods: https://docs.microsoft.com/en-us/powershell/module/microsoft.powershell.utility/invoke-webrequest
-      .asList("DEFAULT", "GET", "HEAD", "POST", "PUT", "DELETE", "TRACE", "OPTIONS", "MERGE", "PATCH");
+      .asList("DEFAULT", "GET", "HEAD", "POST", "PUT", "DELETE", "TRACE", "OPTIONS", "MERGE",
+          "PATCH");
 
   static {
     // reference used for escaping rules: https://ss64.com/ps/syntax-esc.html
-    final Map<CharSequence, CharSequence> escapePowershellMap = new HashMap<>();
-    escapePowershellMap.put("`", "``");
-    escapePowershellMap.put("#", "`#");
-    escapePowershellMap.put("\"", "`\"");
-    escapePowershellMap.put("'", "`'");
-    escapePowershellMap.put(";", "`;");
     ESCAPE_POWERSHELL = new LookupTranslator(
-        Collections.unmodifiableMap(escapePowershellMap)
+        Map.of("`", "``", "#", "`#", "\"", "`\"", "'", "`'", ";", "`;")
     );
   }
 }
